notebook(WhyPolars.ipynb): added cells to compare query execution times bewteen polars and pandas with pyarrow

--- a/WhyPolars.ipynb
+++ b/WhyPolars.ipynb
@@ -17,15 +17,782 @@
    "outputs": [],
    "source": [
     "import polars as pl\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pathlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "path_to_data = pathlib.Path(\"data/yellow_tripdata_2022-01.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe td {\n",
+       "        white-space: pre;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe td {\n",
+       "        padding-top: 0;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe td {\n",
+       "        padding-bottom: 0;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "<small>shape: (2, 19)</small>\n",
+       "<thead>\n",
+       "<tr>\n",
+       "<th>\n",
+       "VendorID\n",
+       "</th>\n",
+       "<th>\n",
+       "tpep_pickup_datetime\n",
+       "</th>\n",
+       "<th>\n",
+       "tpep_dropoff_datetime\n",
+       "</th>\n",
+       "<th>\n",
+       "passenger_count\n",
+       "</th>\n",
+       "<th>\n",
+       "trip_distance\n",
+       "</th>\n",
+       "<th>\n",
+       "RatecodeID\n",
+       "</th>\n",
+       "<th>\n",
+       "store_and_fwd_flag\n",
+       "</th>\n",
+       "<th>\n",
+       "PULocationID\n",
+       "</th>\n",
+       "<th>\n",
+       "DOLocationID\n",
+       "</th>\n",
+       "<th>\n",
+       "payment_type\n",
+       "</th>\n",
+       "<th>\n",
+       "fare_amount\n",
+       "</th>\n",
+       "<th>\n",
+       "extra\n",
+       "</th>\n",
+       "<th>\n",
+       "mta_tax\n",
+       "</th>\n",
+       "<th>\n",
+       "tip_amount\n",
+       "</th>\n",
+       "<th>\n",
+       "tolls_amount\n",
+       "</th>\n",
+       "<th>\n",
+       "improvement_surcharge\n",
+       "</th>\n",
+       "<th>\n",
+       "total_amount\n",
+       "</th>\n",
+       "<th>\n",
+       "congestion_surcharge\n",
+       "</th>\n",
+       "<th>\n",
+       "airport_fee\n",
+       "</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "i64\n",
+       "</td>\n",
+       "<td>\n",
+       "datetime[ns]\n",
+       "</td>\n",
+       "<td>\n",
+       "datetime[ns]\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "str\n",
+       "</td>\n",
+       "<td>\n",
+       "i64\n",
+       "</td>\n",
+       "<td>\n",
+       "i64\n",
+       "</td>\n",
+       "<td>\n",
+       "i64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "</tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr>\n",
+       "<td>\n",
+       "1\n",
+       "</td>\n",
+       "<td>\n",
+       "2022-01-01 00:35:40\n",
+       "</td>\n",
+       "<td>\n",
+       "2022-01-01 00:53:29\n",
+       "</td>\n",
+       "<td>\n",
+       "2.0\n",
+       "</td>\n",
+       "<td>\n",
+       "3.8\n",
+       "</td>\n",
+       "<td>\n",
+       "1.0\n",
+       "</td>\n",
+       "<td>\n",
+       "&quot;N&quot;\n",
+       "</td>\n",
+       "<td>\n",
+       "142\n",
+       "</td>\n",
+       "<td>\n",
+       "236\n",
+       "</td>\n",
+       "<td>\n",
+       "1\n",
+       "</td>\n",
+       "<td>\n",
+       "14.5\n",
+       "</td>\n",
+       "<td>\n",
+       "3.0\n",
+       "</td>\n",
+       "<td>\n",
+       "0.5\n",
+       "</td>\n",
+       "<td>\n",
+       "3.65\n",
+       "</td>\n",
+       "<td>\n",
+       "0.0\n",
+       "</td>\n",
+       "<td>\n",
+       "0.3\n",
+       "</td>\n",
+       "<td>\n",
+       "21.95\n",
+       "</td>\n",
+       "<td>\n",
+       "2.5\n",
+       "</td>\n",
+       "<td>\n",
+       "0.0\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "1\n",
+       "</td>\n",
+       "<td>\n",
+       "2022-01-01 00:33:43\n",
+       "</td>\n",
+       "<td>\n",
+       "2022-01-01 00:42:07\n",
+       "</td>\n",
+       "<td>\n",
+       "1.0\n",
+       "</td>\n",
+       "<td>\n",
+       "2.1\n",
+       "</td>\n",
+       "<td>\n",
+       "1.0\n",
+       "</td>\n",
+       "<td>\n",
+       "&quot;N&quot;\n",
+       "</td>\n",
+       "<td>\n",
+       "236\n",
+       "</td>\n",
+       "<td>\n",
+       "42\n",
+       "</td>\n",
+       "<td>\n",
+       "1\n",
+       "</td>\n",
+       "<td>\n",
+       "8.0\n",
+       "</td>\n",
+       "<td>\n",
+       "0.5\n",
+       "</td>\n",
+       "<td>\n",
+       "0.5\n",
+       "</td>\n",
+       "<td>\n",
+       "4.0\n",
+       "</td>\n",
+       "<td>\n",
+       "0.0\n",
+       "</td>\n",
+       "<td>\n",
+       "0.3\n",
+       "</td>\n",
+       "<td>\n",
+       "13.3\n",
+       "</td>\n",
+       "<td>\n",
+       "0.0\n",
+       "</td>\n",
+       "<td>\n",
+       "0.0\n",
+       "</td>\n",
+       "</tr>\n",
+       "</tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "shape: (2, 19)\n",
+       "┌──────────┬────────────┬────────────┬────────────┬─────┬────────────┬────────────┬────────────┬───────────┐\n",
+       "│ VendorID ┆ tpep_picku ┆ tpep_dropo ┆ passenger_ ┆ ... ┆ improvemen ┆ total_amou ┆ congestion ┆ airport_f │\n",
+       "│ ---      ┆ p_datetime ┆ ff_datetim ┆ count      ┆     ┆ t_surcharg ┆ nt         ┆ _surcharge ┆ ee        │\n",
+       "│ i64      ┆ ---        ┆ e          ┆ ---        ┆     ┆ e          ┆ ---        ┆ ---        ┆ ---       │\n",
+       "│          ┆ datetime[n ┆ ---        ┆ f64        ┆     ┆ ---        ┆ f64        ┆ f64        ┆ f64       │\n",
+       "│          ┆ s]         ┆ datetime[n ┆            ┆     ┆ f64        ┆            ┆            ┆           │\n",
+       "│          ┆            ┆ s]         ┆            ┆     ┆            ┆            ┆            ┆           │\n",
+       "╞══════════╪════════════╪════════════╪════════════╪═════╪════════════╪════════════╪════════════╪═══════════╡\n",
+       "│ 1        ┆ 2022-01-01 ┆ 2022-01-01 ┆ 2.0        ┆ ... ┆ 0.3        ┆ 21.95      ┆ 2.5        ┆ 0.0       │\n",
+       "│          ┆ 00:35:40   ┆ 00:53:29   ┆            ┆     ┆            ┆            ┆            ┆           │\n",
+       "│ 1        ┆ 2022-01-01 ┆ 2022-01-01 ┆ 1.0        ┆ ... ┆ 0.3        ┆ 13.3       ┆ 0.0        ┆ 0.0       │\n",
+       "│          ┆ 00:33:43   ┆ 00:42:07   ┆            ┆     ┆            ┆            ┆            ┆           │\n",
+       "└──────────┴────────────┴────────────┴────────────┴─────┴────────────┴────────────┴────────────┴───────────┘"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# look at the first two rows of this data file\n",
+    "pl.scan_parquet(path_to_data).head(2).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can compare the time taken to read in this data file using pandas and using Polars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "124 ms ± 5.38 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "pl.read_parquet(path_to_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "226 ms ± 3.41 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "pd.read_parquet(path_to_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Now Let's Try Running a Query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62.9 ms ± 2.81 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "polars_results = (\n",
+    "    pl.scan_parquet(path_to_data)\n",
+    "    .groupby(\"passenger_count\")\n",
+    "    .agg(\n",
+    "        [\n",
+    "            pl.col(\"trip_distance\").mean().suffix(\"_mean\"),\n",
+    "            pl.col(\"trip_distance\").max().suffix(\"_max\")\n",
+    "        ]\n",
+    "    )\n",
+    "    .collect()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polars_results = (\n",
+    "    pl.scan_parquet(path_to_data)\n",
+    "    .groupby(\"passenger_count\")\n",
+    "    .agg(\n",
+    "        [\n",
+    "            pl.col(\"trip_distance\").mean().suffix(\"_mean\"),\n",
+    "            pl.col(\"trip_distance\").max().suffix(\"_max\")\n",
+    "        ]\n",
+    "    )\n",
+    "    .collect()\n",
+    ")\n",
+    "\n",
+    "pandas_results = (\n",
+    "    pd.read_parquet(path_to_data, engine=\"pyarrow\", columns=[\"passenger_count\", \"trip_distance\"])\n",
+    "    .groupby(\"passenger_count\")\n",
+    "    .agg({\"trip_distance\": [\"mean\", \"max\"]})\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "113 ms ± 1.62 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "pandas_results = (\n",
+    "    pd.read_parquet(path_to_data, engine=\"pyarrow\", columns=[\"passenger_count\", \"trip_distance\"])\n",
+    "    .groupby(\"passenger_count\")\n",
+    "    .agg({\"trip_distance\": [\"mean\", \"max\"]})\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe td {\n",
+       "        white-space: pre;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe td {\n",
+       "        padding-top: 0;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe td {\n",
+       "        padding-bottom: 0;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "<small>shape: (10, 3)</small>\n",
+       "<thead>\n",
+       "<tr>\n",
+       "<th>\n",
+       "passenger_count\n",
+       "</th>\n",
+       "<th>\n",
+       "trip_distance_mean\n",
+       "</th>\n",
+       "<th>\n",
+       "trip_distance_max\n",
+       "</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "<td>\n",
+       "f64\n",
+       "</td>\n",
+       "</tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr>\n",
+       "<td>\n",
+       "0.0\n",
+       "</td>\n",
+       "<td>\n",
+       "2.746838\n",
+       "</td>\n",
+       "<td>\n",
+       "622.0\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "1.0\n",
+       "</td>\n",
+       "<td>\n",
+       "3.0153\n",
+       "</td>\n",
+       "<td>\n",
+       "620.0\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "2.0\n",
+       "</td>\n",
+       "<td>\n",
+       "3.503723\n",
+       "</td>\n",
+       "<td>\n",
+       "651.0\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "3.0\n",
+       "</td>\n",
+       "<td>\n",
+       "3.343565\n",
+       "</td>\n",
+       "<td>\n",
+       "196.9\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "4.0\n",
+       "</td>\n",
+       "<td>\n",
+       "3.48676\n",
+       "</td>\n",
+       "<td>\n",
+       "616.8\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "5.0\n",
+       "</td>\n",
+       "<td>\n",
+       "3.00871\n",
+       "</td>\n",
+       "<td>\n",
+       "254.88\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "6.0\n",
+       "</td>\n",
+       "<td>\n",
+       "3.149393\n",
+       "</td>\n",
+       "<td>\n",
+       "57.58\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "7.0\n",
+       "</td>\n",
+       "<td>\n",
+       "0.792222\n",
+       "</td>\n",
+       "<td>\n",
+       "6.81\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "8.0\n",
+       "</td>\n",
+       "<td>\n",
+       "0.51125\n",
+       "</td>\n",
+       "<td>\n",
+       "4.09\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "9.0\n",
+       "</td>\n",
+       "<td>\n",
+       "9.506667\n",
+       "</td>\n",
+       "<td>\n",
+       "28.4\n",
+       "</td>\n",
+       "</tr>\n",
+       "</tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "shape: (10, 3)\n",
+       "┌─────────────────┬────────────────────┬───────────────────┐\n",
+       "│ passenger_count ┆ trip_distance_mean ┆ trip_distance_max │\n",
+       "│ ---             ┆ ---                ┆ ---               │\n",
+       "│ f64             ┆ f64                ┆ f64               │\n",
+       "╞═════════════════╪════════════════════╪═══════════════════╡\n",
+       "│ 0.0             ┆ 2.746838           ┆ 622.0             │\n",
+       "│ 1.0             ┆ 3.0153             ┆ 620.0             │\n",
+       "│ 2.0             ┆ 3.503723           ┆ 651.0             │\n",
+       "│ 3.0             ┆ 3.343565           ┆ 196.9             │\n",
+       "│ ...             ┆ ...                ┆ ...               │\n",
+       "│ 6.0             ┆ 3.149393           ┆ 57.58             │\n",
+       "│ 7.0             ┆ 0.792222           ┆ 6.81              │\n",
+       "│ 8.0             ┆ 0.51125            ┆ 4.09              │\n",
+       "│ 9.0             ┆ 9.506667           ┆ 28.4              │\n",
+       "└─────────────────┴────────────────────┴───────────────────┘"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "polars_results.sort(\"passenger_count\").drop_nulls()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">trip_distance</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.0</th>\n",
+       "      <td>2.746838</td>\n",
+       "      <td>622.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>3.015300</td>\n",
+       "      <td>620.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.0</th>\n",
+       "      <td>3.503723</td>\n",
+       "      <td>651.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.0</th>\n",
+       "      <td>3.343565</td>\n",
+       "      <td>196.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.0</th>\n",
+       "      <td>3.486760</td>\n",
+       "      <td>616.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5.0</th>\n",
+       "      <td>3.008710</td>\n",
+       "      <td>254.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.0</th>\n",
+       "      <td>3.149393</td>\n",
+       "      <td>57.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7.0</th>\n",
+       "      <td>0.792222</td>\n",
+       "      <td>6.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8.0</th>\n",
+       "      <td>0.511250</td>\n",
+       "      <td>4.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9.0</th>\n",
+       "      <td>9.506667</td>\n",
+       "      <td>28.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                trip_distance        \n",
+       "                         mean     max\n",
+       "passenger_count                      \n",
+       "0.0                  2.746838  622.00\n",
+       "1.0                  3.015300  620.00\n",
+       "2.0                  3.503723  651.00\n",
+       "3.0                  3.343565  196.90\n",
+       "4.0                  3.486760  616.80\n",
+       "5.0                  3.008710  254.88\n",
+       "6.0                  3.149393   57.58\n",
+       "7.0                  0.792222    6.81\n",
+       "8.0                  0.511250    4.09\n",
+       "9.0                  9.506667   28.40"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pandas_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the conclusion here is that polars is at least 2 times as fast as pandas with parquet and pyarrow, and we have the exact same results between the two methods, up to numerical uncertainty. "
+   ]
   }
  ],
  "metadata": {
