docs(WhyPolars.ipynb): added documentation on where the data was downloaded from

--- a/WhyPolars.ipynb
+++ b/WhyPolars.ipynb
@@ -7,7 +7,9 @@
     "# Why should you use Polars\n",
     "* polars is much faster out of the box than other dataframe libraries\n",
     "* polars uses a declarative execution engine to optimize your queries\n",
-    "* polars code uses the well-known PySpark syntax structure"
+    "* polars code uses the well-known PySpark syntax structure\n",
+    "\n",
+    "The data for this comparison is the January 2022 Yellow Taxi Trip records, and it comes from [here](https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2022-01.parquet)"
    ]
   },
   {
